actualización como alfa de index & landing Page

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,7 +2,20 @@
   "name": "agora",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "jade/index.jade",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"index.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+    },
+    {
+      "path": "jade/subeTuEvento.jade",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"subeTuEvento.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+    },
+    {
+      "path": "jade/landingPage.jade",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"landingPage.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+    }
+  ],
   "fileTree": {
     "expandedDirs": [],
     "hideSystemFiles": true,
@@ -17,9 +30,41 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "scss/agora.scss",
+      "imports": [
+        "scss/_media_queries.scss",
+        "scss/_menu_navegacion.scss",
+        "scss/_menu_navegacion_extendida.scss",
+        "scss/_columnas.scss",
+        "scss/_back.scss",
+        "scss/_tarjetas.scss",
+        "scss/_modal.scss",
+        "scss/_boton_menu.scss"
+      ]
+    },
+    {
+      "path": "scss/landingPage.scss",
+      "imports": [
+        "scss/_media_queries.scss",
+        "scss/landingPage/_beta_modal.scss",
+        "scss/_menu_navegacion.scss",
+        "scss/landingPage/_menu_navegacion_landingPage.scss",
+        "scss/_menu_navegacion_extendida.scss",
+        "scss/landingPage/_portada.scss",
+        "scss/landingPage/_beta.scss",
+        "scss/landingPage/_agora.scss",
+        "scss/landingPage/_descubre.scss",
+        "scss/landingPage/_comunica.scss",
+        "scss/landingPage/_explorar.scss",
+        "scss/landingPage/_pie.scss",
+        "scss/_boton_menu.scss"
+      ]
+    }
+  ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
