Index -- Estilo de tarjetas, menú y extensión. Landing Page -- Estilo de portada, descripción, comunica, descubre & explorar

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -35,13 +35,13 @@
       "path": "scss/agora.scss",
       "imports": [
         "scss/_media_queries.scss",
-        "scss/_menu_navegacion.scss",
-        "scss/_menu_navegacion_extendida.scss",
-        "scss/_columnas.scss",
-        "scss/_back.scss",
-        "scss/_tarjetas.scss",
-        "scss/_modal.scss",
-        "scss/_boton_menu.scss"
+        "scss/index/_menu_navegacion.scss",
+        "scss/index/_menu_navegacion_extendida.scss",
+        "scss/index/_columnas.scss",
+        "scss/index/_back.scss",
+        "scss/index/_tarjetas.scss",
+        "scss/index/_modal.scss",
+        "scss/index/_boton_menu.scss"
       ]
     },
     {
@@ -49,22 +49,19 @@
       "imports": [
         "scss/_media_queries.scss",
         "scss/landingPage/_beta_modal.scss",
-        "scss/_menu_navegacion.scss",
         "scss/landingPage/_menu_navegacion_landingPage.scss",
-        "scss/_menu_navegacion_extendida.scss",
         "scss/landingPage/_portada.scss",
         "scss/landingPage/_beta.scss",
-        "scss/landingPage/_agora.scss",
+        "scss/landingPage/_descripcion.scss",
         "scss/landingPage/_descubre.scss",
         "scss/landingPage/_comunica.scss",
         "scss/landingPage/_explorar.scss",
-        "scss/landingPage/_pie.scss",
-        "scss/_boton_menu.scss"
+        "scss/landingPage/_pie.scss"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
