Index, Modal Crear & LandingPage -- Etiquetado & Estilo Completo 'Fase Alfa'

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -14,6 +14,10 @@
     {
       "path": "jade/landingPage.jade",
       "configJson": "{\"forceCompile\":false,\"customOutput\":\"landingPage.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+    },
+    {
+      "path": "jade/modalCrear.jade",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"modalCrear.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
     }
   ],
   "fileTree": {
@@ -58,10 +62,16 @@
         "scss/landingPage/_explorar.scss",
         "scss/landingPage/_pie.scss"
       ]
+    },
+    {
+      "path": "scss/modal_crear.scss",
+      "imports": [
+        "scss/_media_queries.scss"
+      ]
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
