Tarjetas--Demo con eventos intento 01

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -71,7 +71,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -138,6 +138,7 @@
     "uploadOnChange": false,
     "ftp": {
       "secure": false,
+      "keepAlive": true,
       "host": "",
       "port": 21,
       "user": "",
